--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
   "scripts": {
-    "test": "karma start karma.conf.js"
+    "test": "karma start karma.conf.ts"
   },
   "dependencies": {
-    "lodash": "^4.17.10"
+    "lodash": "4.17.10"
   },
   "devDependencies": {
-    "@types/jasmine": "^2.8.8",
-    "jasmine": "^3.2.0",
-    "karma": "^3.0.0",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-jasmine": "^1.1.2",
-    "karma-webpack": "^3.0.5",
-    "ts-loader": "^5.2.0",
-    "typescript": "^3.0.3",
-    "webpack": "^4.19.1",
-    "webpack-cli": "^3.1.1"
+    "@types/jasmine": "2.8.8",
+    "@types/karma": "3.0.1",
+    "@types/webpack": "4.4.24",
+    "jasmine": "3.2.0",
+    "karma": "3.0.0",
+    "karma-chrome-launcher": "2.2.0",
+    "karma-jasmine": "1.1.2",
+    "karma-webpack": "3.0.5",
+    "ts-loader": "5.2.0",
+    "ts-node": "8.0.2",
+    "typescript": "3.0.3",
+    "webpack": "4.19.1",
+    "webpack-cli": "3.1.1"
   }
 }
